--- a/index.html
+++ b/index.html
@@ -148,9 +148,11 @@
                                 <p>National Taiwan University</p>
                                 <p><strong>Description:</strong></p>
                                 <p>
-                                    1. Maintenance center equipment (computers, printers, routers): update and maintain operating systems, manage user behavior, and monitor systems;<br>
+                                    1. Maintenance center equipment (computers, printers, routers): update and maintain
+                                    operating systems, manage user behavior, and monitor systems;<br>
                                     2. Operate 3D printing printers and laser engraving machines;<br>
-                                    3. Develop and maintain high-performance computing service web pages and backends: <a href="http://hpc.ntu.edu.tw">NTUHPC</a>.
+                                    3. Develop and maintain high-performance computing service web pages and backends:
+                                    <a href="http://hpc.ntu.edu.tw">NTUHPC</a>.
                                 </p>
                             </div>
                         </li>
@@ -166,8 +168,10 @@
                                 <h5 class="card-title">Intelligence Manufacturing / IoT</h5>
                                 <p class="card-text">
                                     1. Precision machinery measurement and optimization algorithms;<br>
-                                    2. Development and application of virtual reality and augmented reality in the factory;<br>
-                                    3. Use various mechanical components and electronic components to develop through microcomputers or evaluation board (Arduino, STM32, etc.).<br>
+                                    2. Development and application of virtual reality and augmented reality in the
+                                    factory;<br>
+                                    3. Use various mechanical components and electronic components to develop through
+                                    microcomputers or evaluation board (Arduino, STM32, etc.).<br>
                                     Certified by National Taiwan University:
                                     <a href="./asset/img/skills/skill_IM.pdf" target="_blank">Certificate</a>
                                 </p>
@@ -176,8 +180,10 @@
                             <div>
                                 <h5 class="card-title">Mechanical Design and Analysis</h5>
                                 <p class="card-text">
-                                    1. From zero to one mechanical design and development, with the concept of design for assembly to make machinery more efficient when assembled in the factory;<br>
-                                    2. Conduct finite element method analysis and fluid mechanics analysis on mechanical design, and evaluate feasibility.<br>
+                                    1. From zero to one mechanical design and development, with the concept of design
+                                    for assembly to make machinery more efficient when assembled in the factory;<br>
+                                    2. Conduct finite element method analysis and fluid mechanics analysis on mechanical
+                                    design, and evaluate feasibility.<br>
                                     Tools: AutoCAD, Inventor, SolidWork, Ansys, ABAQUS, Pro/E, etc.<br>
                                     Other: Finite element method, Computational Fluid Dynamics
                                 </p>
@@ -223,10 +229,12 @@
                         <div class="row align-items-start">
                             <div class="col">
                                 <div class="card">
-                                    <img src="./asset/img/airformula/IMG_4026.JPG" class="card-img-top" alt="...">
+                                    <img src="./asset/img/me1011/IMG_4026.JPG" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Formula Air 4</h5>
-                                        <p class="card-text">Develop a wind-driven car from scratch. The car must follow the trajectory and climb a 25-degree slope, and it is restricted to use aluminum alloy to make any parts of the car.</p>
+                                        <p class="card-text">Develop a wind-driven car from scratch. The car must follow
+                                            the trajectory and climb a 25-degree slope, and it is restricted to use
+                                            aluminum alloy to make any parts of the car.</p>
                                         <button type="button" class="btn btn-primary stretched-link" data-toggle="modal"
                                             data-target="#projectDetails1">
                                             Details
@@ -237,11 +245,14 @@
 
                             <div class="col">
                                 <div class="card">
-                                    <img src="./asset/img/test.jpg" class="card-img-top" alt="...">
+                                    <img src="./asset/img/me5140/pic.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
+                                        <h5 class="card-title">Minimum Zone Algorithms of Sphericity and Flatness</h5>
+                                        <p class="card-text">Sphericity is a measure of how closely the shape of an
+                                            object
+                                            resembles that of a perfect sphere. In this case, referred to a paper by
+                                            Fan, and Lee (1999), the
+                                            algorithm for finding the minimum zone sphericity. </p>
                                         <button type="button" class="btn btn-primary stretched-link" data-toggle="modal"
                                             data-target="#projectDetails2">
                                             Details
@@ -251,11 +262,15 @@
                             </div>
                             <div class="col">
                                 <div class="card">
-                                    <img src="./asset/img/test.jpg" class="card-img-top" alt="...">
+                                    <img src="./asset/img/me5163/pic.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
+                                        <h5 class="card-title">Stress and Safety Analysis of Steel Ladder</h5>
+                                        <p class="card-text">This article analyzes the stress distribution
+                                            of ladder by modeling a person climbing up and
+                                            down using the ladder. This is done by using
+                                            Computational Aided Engineering (CAE)
+                                            software to use Finite Element Method in the
+                                            ladder.</p>
                                         <button type="button" class="btn btn-primary stretched-link" data-toggle="modal"
                                             data-target="#projectDetails3">
                                             Details
@@ -271,13 +286,15 @@
                         <div class="row align-items-start">
                             <div class="col">
                                 <div class="card">
-                                    <img src="./asset/img/test.jpg" class="card-img-top" alt="...">
+                                    <img src="./asset/img/me5248/pic.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
+                                        <h5 class="card-title">3D Re-build RGM79SP GM Sniper II</h5>
+                                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            Aut perferendis quibusdam atque maxime dolorum quas laboriosam quo
+                                            temporibus vero suscipit. Placeat nihil possimus amet excepturi saepe
+                                            provident reprehenderit. Possimus, ea?</p>
                                         <button type="button" class="btn btn-primary stretched-link" data-toggle="modal"
-                                            data-target="#projectDetails1">
+                                            data-target="#projectDetails4">
                                             Details
                                         </button>
                                     </div>
@@ -286,13 +303,12 @@
 
                             <div class="col">
                                 <div class="card">
-                                    <img src="./asset/img/test.jpg" class="card-img-top" alt="...">
+                                    <img src="./asset/img/me5049/pic.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
+                                        <h5 class="card-title">Simple VR/MR Training System</h5>
+                                        <p class="card-text">Using the Unity3D to develop a program for training worker in factory to build a computer.</p>
                                         <button type="button" class="btn btn-primary stretched-link" data-toggle="modal"
-                                            data-target="#projectDetails2">
+                                            data-target="#projectDetails5">
                                             Details
                                         </button>
                                     </div>
@@ -300,13 +316,12 @@
                             </div>
                             <div class="col">
                                 <div class="card">
-                                    <img src="./asset/img/test.jpg" class="card-img-top" alt="...">
+                                    <img src="./asset/img/me3004/pic.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
+                                        <h5 class="card-title">Automatic Measuring Device for Large Pipe Inner Holes</h5>
+                                        <p class="card-text">Design an industrial automatic measuring device for large pipe inner holes.</p>
                                         <button type="button" class="btn btn-primary stretched-link" data-toggle="modal"
-                                            data-target="#projectDetails3">
+                                            data-target="#projectDetails6">
                                             Details
                                         </button>
                                     </div>
@@ -330,9 +345,11 @@
                     </button>
                     <div class="mt-3">
                         <h5>Formula Air 4</h5>
-                        <p>Project Details: <span><a href="./asset/img/airformula/機工實務2021_FormulaAir_Final.pdf">PDF</a></span> / Report: <span><a href="./asset/img/airformula/機工實務2021_FormulaAir_Final.pdf">PDF</a></span></p>
+                        <p>Project Details: <span><a href="./asset/img/me1011/機工實務2021_FormulaAir_Final.pdf"
+                                    target="_blank">PDF</a></span> / Report: <span><a
+                                    href="./asset/img/me1011/機械工程實務-第20組-期末報告.pdf" target="_blank">PDF</a></span></p>
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="./asset/img/airformula/25.mp4"></iframe>
+                            <iframe class="embed-responsive-item" src="./asset/img/me1011/25.mp4"></iframe>
                         </div>
                     </div>
                 </div>
@@ -347,15 +364,16 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae, aspernatur adipisci sunt
-                        pariatur reiciendis qui hic fuga odit eius libero aut numquam aliquam fugiat tenetur!
-                        Consectetur necessitatibus odio exercitationem tempora!</p>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item"
+                            src="./asset/img/me5140/Minimum-Zone-Algorithms-of-Sphericity-and-Flatness.pdf"></iframe>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="modal fade custom-modal" id="projectDetails3" tabindex="-1" aria-labelledby="exampleModalLabel"
+    <div class=" modal fade custom-modal" id="projectDetails3" tabindex="-1" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-xl">
             <div class="modal-content">
@@ -363,9 +381,56 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae, aspernatur adipisci sunt
-                        pariatur reiciendis qui hic fuga odit eius libero aut numquam aliquam fugiat tenetur!
-                        Consectetur necessitatibus odio exercitationem tempora!</p>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="./asset/img/me5163/Final Report.pdf"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class=" modal fade custom-modal" id="projectDetails4" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="./asset/img/me5248/final_present3.mp4"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class=" modal fade custom-modal" id="projectDetails5" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="./asset/img/me5049/ARMS_final_demo.mp4"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class=" modal fade custom-modal" id="projectDetails6" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <p>Report: <span><a href="./asset/img/me3004/R2_2_Final Report 修正版.pdf"
+                                target="_blank">PDF</a></span></p>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="./asset/img/me3004/final.mp4"></iframe>
+                    </div>
                 </div>
             </div>
         </div>
