--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wilson Quack</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./asset/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./asset/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./asset/img/favicon-16x16.png">
+    <link rel="manifest" href="./asset/img/site.webmanifest">
+
     <link href="./asset/bootstrap-4.5.3-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="./asset/css/styles.css" rel="stylesheet">
 </head>
@@ -173,7 +179,7 @@
                                     3. Use various mechanical components and electronic components to develop through
                                     microcomputers or evaluation board (Arduino, STM32, etc.).<br>
                                     Certified by National Taiwan University:
-                                    <a href="./asset/img/skills/skill_IM.pdf" target="_blank">Certificate</a>
+                                    <a href="./asset/data/skills/skill_IM.pdf" target="_blank">Certificate</a>
                                 </p>
                             </div>
                             <hr class="my-4">
@@ -229,7 +235,7 @@
                         <div class="row align-items-start">
                             <div class="col">
                                 <div class="card">
-                                    <img src="./asset/img/me1011/IMG_4026.JPG" class="card-img-top" alt="...">
+                                    <img src="./asset/data/me1011/IMG_4026.JPG" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Formula Air 4</h5>
                                         <p class="card-text">Develop a wind-driven car from scratch. The car must follow
@@ -245,7 +251,7 @@
 
                             <div class="col">
                                 <div class="card">
-                                    <img src="./asset/img/me5140/pic.png" class="card-img-top" alt="...">
+                                    <img src="./asset/data/me5140/pic.png" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Minimum Zone Algorithms of Sphericity and Flatness</h5>
                                         <p class="card-text">Sphericity is a measure of how closely the shape of an
@@ -262,7 +268,7 @@
                             </div>
                             <div class="col">
                                 <div class="card">
-                                    <img src="./asset/img/me5163/pic.png" class="card-img-top" alt="...">
+                                    <img src="./asset/data/me5163/pic.png" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Stress and Safety Analysis of Steel Ladder</h5>
                                         <p class="card-text">This article analyzes the stress distribution
@@ -286,7 +292,7 @@
                         <div class="row align-items-start">
                             <div class="col">
                                 <div class="card">
-                                    <img src="./asset/img/me5248/pic.png" class="card-img-top" alt="...">
+                                    <img src="./asset/data/me5248/pic.png" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">3D Re-build RGM79SP GM Sniper II</h5>
                                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -303,10 +309,11 @@
 
                             <div class="col">
                                 <div class="card">
-                                    <img src="./asset/img/me5049/pic.png" class="card-img-top" alt="...">
+                                    <img src="./asset/data/me5049/pic.png" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Simple VR/MR Training System</h5>
-                                        <p class="card-text">Using the Unity3D to develop a program for training worker in factory to build a computer.</p>
+                                        <p class="card-text">Using the Unity3D to develop a program for training worker
+                                            in factory to build a computer.</p>
                                         <button type="button" class="btn btn-primary stretched-link" data-toggle="modal"
                                             data-target="#projectDetails5">
                                             Details
@@ -316,10 +323,12 @@
                             </div>
                             <div class="col">
                                 <div class="card">
-                                    <img src="./asset/img/me3004/pic.png" class="card-img-top" alt="...">
+                                    <img src="./asset/data/me3004/pic.png" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Automatic Measuring Device for Large Pipe Inner Holes</h5>
-                                        <p class="card-text">Design an industrial automatic measuring device for large pipe inner holes.</p>
+                                        <h5 class="card-title">Automatic Measuring Device for Large Pipe Inner Holes
+                                        </h5>
+                                        <p class="card-text">Design an industrial automatic measuring device for large
+                                            pipe inner holes.</p>
                                         <button type="button" class="btn btn-primary stretched-link" data-toggle="modal"
                                             data-target="#projectDetails6">
                                             Details
@@ -345,11 +354,11 @@
                     </button>
                     <div class="mt-3">
                         <h5>Formula Air 4</h5>
-                        <p>Project Details: <span><a href="./asset/img/me1011/機工實務2021_FormulaAir_Final.pdf"
+                        <p>Project Details: <span><a href="./asset/data/me1011/機工實務2021_FormulaAir_Final.pdf"
                                     target="_blank">PDF</a></span> / Report: <span><a
-                                    href="./asset/img/me1011/機械工程實務-第20組-期末報告.pdf" target="_blank">PDF</a></span></p>
+                                    href="./asset/data/me1011/機械工程實務-第20組-期末報告.pdf" target="_blank">PDF</a></span></p>
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="./asset/img/me1011/25.mp4"></iframe>
+                            <iframe class="embed-responsive-item" src="./asset/data/me1011/25.mp4"></iframe>
                         </div>
                     </div>
                 </div>
@@ -366,7 +375,7 @@
                     </button>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe class="embed-responsive-item"
-                            src="./asset/img/me5140/Minimum-Zone-Algorithms-of-Sphericity-and-Flatness.pdf"></iframe>
+                            src="./asset/data/me5140/Minimum-Zone-Algorithms-of-Sphericity-and-Flatness.pdf"></iframe>
                     </div>
                 </div>
             </div>
@@ -382,7 +391,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="./asset/img/me5163/Final Report.pdf"></iframe>
+                        <iframe class="embed-responsive-item" src="./asset/data/me5163/Final Report.pdf"></iframe>
                     </div>
                 </div>
             </div>
@@ -397,7 +406,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="./asset/img/me5248/final_present3.mp4"></iframe>
+                        <iframe class="embed-responsive-item" src="./asset/data/me5248/final_present3.mp4"></iframe>
                     </div>
                 </div>
             </div>
@@ -412,7 +421,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="./asset/img/me5049/ARMS_final_demo.mp4"></iframe>
+                        <iframe class="embed-responsive-item" src="./asset/data/me5049/ARMS_final_demo.mp4"></iframe>
                     </div>
                 </div>
             </div>
@@ -426,10 +435,10 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    <p>Report: <span><a href="./asset/img/me3004/R2_2_Final Report 修正版.pdf"
+                    <p>Report: <span><a href="./asset/data/me3004/R2_2_Final Report 修正版.pdf"
                                 target="_blank">PDF</a></span></p>
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="./asset/img/me3004/final.mp4"></iframe>
+                        <iframe class="embed-responsive-item" src="./asset/data/me3004/final.mp4"></iframe>
                     </div>
                 </div>
             </div>
