--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                                     target="_blank">PDF</a></span> / Report: <span><a
                                     href="./asset/data/me1011/機械工程實務-第20組-期末報告.pdf" target="_blank">PDF</a></span></p>
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="./asset/data/me1011/25.mp4"></iframe>
+                            <iframe class="embed-responsive-item" src="./asset/data/me1011/25.mp4" sandbox></iframe>
                         </div>
                     </div>
                 </div>
@@ -406,7 +406,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="./asset/data/me5248/final_present3.mp4"></iframe>
+                        <iframe class="embed-responsive-item" src="./asset/data/me5248/final_present3.mp4" sandbox></iframe>
                     </div>
                 </div>
             </div>
@@ -421,7 +421,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="./asset/data/me5049/ARMS_final_demo.mp4"></iframe>
+                        <iframe class="embed-responsive-item" src="./asset/data/me5049/ARMS_final_demo.mp4" sandbox></iframe>
                     </div>
                 </div>
             </div>
@@ -438,7 +438,7 @@
                     <p>Report: <span><a href="./asset/data/me3004/R2_2_Final Report 修正版.pdf"
                                 target="_blank">PDF</a></span></p>
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="./asset/data/me3004/final.mp4"></iframe>
+                        <iframe class="embed-responsive-item" src="./asset/data/me3004/final.mp4" sandbox></iframe>
                     </div>
                 </div>
             </div>
