--- a/index.html
+++ b/index.html
@@ -295,10 +295,7 @@
                                     <img src="./asset/data/me5248/pic.png" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">3D Re-build RGM79SP GM Sniper II</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                            Aut perferendis quibusdam atque maxime dolorum quas laboriosam quo
-                                            temporibus vero suscipit. Placeat nihil possimus amet excepturi saepe
-                                            provident reprehenderit. Possimus, ea?</p>
+                                        <p class="card-text"></p>
                                         <button type="button" class="btn btn-primary stretched-link" data-toggle="modal"
                                             data-target="#projectDetails4">
                                             Details
