--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                             <div>
                                 <h5 class="card-title">Web Development</h5>
                                 <p class="card-text">
-                                    Frontend: HTML, CSS, Bootstrap; JavaScript, JQuery, react.js, vue.js<br>
+                                    Frontend: HTML, CSS, Bootstrap, Semantic UI; JavaScript, JQuery, react.js, vue.js<br>
                                     Backend: PHP, Laravel, SQL (PostgreSQL, MySQL, etc.)<br>
                                     Platform: AWS, Google Cloud, self-server (via WinSCP or SSH), etc.<br>
                                     Other: Git
