--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <div class="mt-4">
                     <div class="container text-center">
                         <div class="row align-items-start">
-                            <div class="col">
+                            <div class="col col-sm-12">
                                 <div class="card">
                                     <img src="./asset/data/me1011/IMG_4026.JPG" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -249,7 +249,7 @@
                                 </div>
                             </div>
 
-                            <div class="col">
+                            <div class="col col-sm-12">
                                 <div class="card">
                                     <img src="./asset/data/me5140/pic.png" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -266,7 +266,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="col col-sm-12">
                                 <div class="card">
                                     <img src="./asset/data/me5163/pic.png" class="card-img-top" alt="...">
                                     <div class="card-body">
