--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 <div class="mt-4">
                     <div class="container text-center">
                         <div class="row align-items-start">
-                            <div class="col">
+                            <div class="col-12 col-lg-4">
                                 <div class="card">
                                     <img src="./asset/data/me5248/pic.png" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -304,7 +304,7 @@
                                 </div>
                             </div>
 
-                            <div class="col">
+                            <div class="col-12 col-lg-4">
                                 <div class="card">
                                     <img src="./asset/data/me5049/pic.png" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -318,7 +318,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="col-12 col-lg-4">
                                 <div class="card">
                                     <img src="./asset/data/me3004/pic.png" class="card-img-top" alt="...">
                                     <div class="card-body">
